# Project_UrbanFlow

./: .gitignore  2026-05-09_Session_11.md  Business_Requirements_and_Solution.md  DE_Assignment.md  GEMINI.md  README.md  Real_World_DE_Assignment.md  main.py  pyproject.toml  requirements.txt  run_dbt.ps1
Assignment_Instructions/: 1_DE_Assignment.md  2_Broadening_Data_Infrastructure.md
Learnings/Data_Ingestion/: 01_Modular_Framework_and_Config.md  02_Context_Managers_and_Database_Abstraction.md  03_Template_Method_Pattern_and_Modular_Ingestion.md  04_API_Ingestion_State_and_Audit_Integrity.md  05_High_Volume_Batching_and_Defensive_Typing.md
Learnings/Snowflake/: 01_Snowflake_Role_Based_Access_Control.md
Learnings/dbt/: 01_basic_config_FAQs.md  02_Silver_Stage_Taxi_Trips.md  03_Silver_Stage_Weather_Hourly.md  04_Silver_Stage_Lookup_zone.md  05_Gold_Stage.md  06_Seeds_and_dim_calendar.md  07_Feature_Engineering_and_Anomalies.md  08_Financial_Integrity_and_Multi_Fact_Design.md  09_Gold_Star_Schema_and_Dimension_Conforming.md  models.md
dbt/urbanflow/: .user.yml  SILVER_LAYER_MINDMAP.md  dbt_project.yml  profiles.yml
docs/session_logs/: 2026-05-01_Session_4.md
scripts/data_ingestion/: ingest_weather.py  ingest_weather_class.py  ingest_zone_lookup.py  ingestion_taxi.py  ingestion_taxi_class.py  practice_notes.md
session_docs/session_logs/: 2026-04-26_Session_1.md  2026-04-27_Session_2.md  (+6 more)
snowflake_scripts/: 01_Database_and_Schema.sql  02_Snowflake_RBAC.sql  03_DDLs.sql  04_Query_Profiling_Silver_Taxi_Trips.sql  05_Query_profiling_Weather_Hourly.sql
(+26 files in other folders)
