[project]
name = "project-urbanflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "dbt-snowflake>=1.11.4",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "snowflake-connector-python[pandas]>=4.4.0",
]
